update new-footer desktop design

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,11 +1,6 @@
 <footer class="footer">
   <div class="container">
     <div class="row footer-top">
-      <div class="col-sm-2">
-        <div class="mb-3 mb-md-0">
-          <img src="/images/text_racoon_logo.svg" width="100px" height="39" alt="checkly logo"/>
-        </div>
-      </div>
       <div class="col-sm-3">
         <div class="mb-3 mb-md-0">
           <h6>Product</h6>
@@ -17,26 +12,37 @@
               <a href="/product/synthetic-monitoring/">Synthetic monitoring</a>
             </li>
             <li><a href="/integrations">Integrations</a></li>
-            <li><a href="/pricing">Pricing</a></li>
             <li><a href="/docs">Docs</a></li>
             <li><a href="/docs/api">API reference</a></li>
             <li><a href="https://headwayapp.co/checkly-updates" target="_blank" rel="noopener">Product updates</a></li>
+            <li><a href="/pricing">Pricing</a></li>
             <li><a href="https://status.checklyhq.com/" target="_blank" rel="noopener">Live dashboard</a><span
                 class="green-dot"></span></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-3">
-        <div class="mb-3 mb-md-0"><h6>Company</h6>
+        <div class="mb-3 mb-md-0">
+          <h6>Company</h6>
           <ul>
             <li><a href="/about">About</a></li>
             <li><a href="/jobs">Jobs
             </a></li>
             <li><a href="https://blog.checklyhq.com/" target="_blank" rel="noopener">Blog</a></li>
-            <li><a href="/terms">Terms of Use</a></li>
-            <li><a href="/privacy">Privacy policy</a></li>
             <li><a href="/open-source">Open Source</a></li>
             <li><a href="/security">Security</a></li>
+            <li><a href="/terms">Terms of use</a></li>
+            <li><a href="/privacy">Privacy policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="mb-3 mb-md-0">
+          <h6>Open Source</h6>
+          <ul>
+            <li><a href="https://theheadless.dev" target="_blank" rel="noopener">theheadless.dev</a></li>
+            <li><a href="https://chrome.google.com/webstore/detail/headless-recorder/djeegiggegleadkkbgopoonhjimgehda?hl=en" target="_blank" rel="noopener">Headless Recorder</a></li>
+            <li><a href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">Terraform Provider</a></li>
           </ul>
         </div>
       </div>
@@ -56,11 +62,18 @@
           </ul>
         </div>
       </div>
-      <div class="col-sm-1"></div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="footer-divider"></div>
+      </div>
     </div>
     <div class="row footer-bottom">
-      <div class="col-12">
-        <span>©2021 Checkly Inc. All Rights Reserved.</span>
+      <div class="col-12 flex-wrap">
+        <div>
+          <img class="logo" src="/images/footer-logo.svg" width="52" height="47" alt="checkly logo"/>
+          <div>Copyright © 2021 Checkly Inc. All rights reserved.</div>
+        </div>
         <div class="float-right">
           <a class="github" href="https://github.com/checkly" target="_blank" rel="noopener"><img
           src="/images/github.svg" alt="github logo" width="24" height="24" /></a>
