table & mobile design for the new-footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <div class="container">
     <div class="row footer-top">
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6>Product</h6>
-          <ul>
+          <h6 id="menu_1_header">Product</h6>
+          <ul id="menu_1" class="desktop-show">
             <li>
               <a href="/product/api-monitoring/">API monitoring</a>
             </li>
@@ -21,10 +21,10 @@
           </ul>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6>Company</h6>
-          <ul>
+          <h6 id="menu_2_header">Company</h6>
+          <ul id="menu_2" class="desktop-show">
             <li><a href="/about">About</a></li>
             <li><a href="/jobs">Jobs
             </a></li>
@@ -36,26 +36,28 @@
           </ul>
         </div>
       </div>
-      <div class="col-sm-3">
+      <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6>Open Source</h6>
-          <ul>
+          <h6 id="menu_3_header">Open Source</h6>
+          <ul id="menu_3" class="desktop-show">
             <li><a href="https://theheadless.dev" target="_blank" rel="noopener">theheadless.dev</a></li>
             <li><a href="https://chrome.google.com/webstore/detail/headless-recorder/djeegiggegleadkkbgopoonhjimgehda?hl=en" target="_blank" rel="noopener">Headless Recorder</a></li>
             <li><a href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">Terraform Provider</a></li>
           </ul>
         </div>
       </div>
-      <div class="col-sm-3">
-        <div class="mb-3 mb-md-0"><h6>Connect</h6>
-          <ul>
+      <div class="col-lg-3">
+        <div class="mb-3 mb-md-0">
+          <h6 id="menu_4_header">Connect</h6>
+          <ul id="menu_4" class="desktop-show">
             <li><a class="open-intercom-link" href="mailto:support@checklyhq.com">Support</a></li>
             <li><a href="https://twitter.com/checklyHQ" target="_blank" rel="noopener">Twitter @ChecklyHQ</a></li>
             <li><a href="https://github.com/checkly/product-roadmap/projects/1" target="_blank" rel="noopener">Public Roadmap</a></li>
           </ul>
-        </div><br/>
-        <div class="mb-3 mb-md-0"><h6>How we compare</h6>
-          <ul>
+        </div>
+        <div class="mb-3 mb-md-0">
+          <h6 id="menu_5_header">How we compare</h6>
+          <ul id="menu_5" class="desktop-show">
             <li><a href="/alternative/to-pingdom/">Alternative to Pingdom</a></li>
             <li><a href="/alternative/to-runscope/">Alternative to Runscope</a></li>
             <li><a href="/alternative/to-assertible/">Alternative to Assertible</a></li>
@@ -70,7 +72,7 @@
     </div>
     <div class="row footer-bottom">
       <div class="col-12 flex-wrap">
-        <div>
+        <div class="float-left">
           <img class="logo" src="/images/footer-logo.svg" width="52" height="47" alt="checkly logo"/>
           <div>Copyright © 2021 Checkly Inc. All rights reserved.</div>
         </div>
