--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -3,9 +3,14 @@
   color: $white;
   .footer-top {
     padding: 3.75 * $spacer 0 0;
+    
     h6 {
       color: $black;
       margin-bottom: 1.25 * $spacer;
+
+      &:before {
+        display: none;
+      }
     }
     ul {
       list-style-type: none;
@@ -48,6 +53,52 @@
       margin-right: 15px;
     }
   }
+
+  #menu_5_header {
+    margin-top: 30px;
+  }
+
+  .desktop-show {
+    display: block;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .footer {
+    .footer-top {
+      h6 {
+        margin-bottom: $spacer;
+        &:before {
+          border: none;
+          line-height: 0;
+          content: '\F123';
+          display: inline-block;
+          vertical-align: middle;
+          font-family: Ionicons;
+          margin-right: 8px;
+          margin-top: -3px;
+          font-size: 10px;
+        }
+      }
+      .rotate {
+        &:before {
+          transform: rotate(180deg);
+        }
+      }
+      .show {
+        margin-bottom: $spacer;
+      }
+    }
+    .footer-divider {
+      margin: 1.75 * $spacer 0 2.5 * $spacer;
+    }
+    .desktop-show {
+      display: none;
+    }
+    #menu_5_header {
+      margin-top: 0px;
+    }
+  }
 }
 
 @include media-breakpoint-down(xs) {
@@ -59,7 +110,17 @@
 
         .float-right {
           width: 100%;
+          max-width: 70px;
+          margin: auto;
           margin-bottom: 10px;
+        }
+
+        .float-left {
+          text-align: center;
+          margin: auto;
+          margin-top: 20px;
+          width: 300px;
+
         }
       }
     }
