delete how we work
content is mostly on the OSS page now

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -12,25 +12,8 @@
             <p>Synthetic monitoring and end-to-end testing technologies have been sleepy during the last decade; in contrast, the DevOps-space, CI/CD-workflows, and Developer-tools evolved. Modern automation needs to become faster, easy to implement, open, integrated, and reliable. That's what we are working on every day.</p>
             <p>We believe in a bright future where apps are built and shipped more reliably from dev to production and further. Our vision is to create the best active monitoring platform for developers using modern stacks. A platform with a world-class developer experience!</p>
             <div class="divider pt-5"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="container">
-        <div class="row text-left justify-content-center pt-5">
-          <div class="col-sm-12 col-lg-8">
-            <h2>How we work</h2>
-            <p>We care about delivering an awesome service. We work on Checkly and open source projects like <a href="https://theheadless.dev/?utm_source=checkly-about" rel="noopener">theheadless.dev</a> & <a href="/docs/headless-recorder/">Headless Recorder</a>.
-              We don't take ourselves too serious; we take our work and our customers very seriously.
-            </p>
-            <p>
-              We ❤️ open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers.
-              See <a href="https://github.com/tnolet?tab=sponsoring" rel="noopener">this page</a> for our current sponsorship status.
-              Also, we support nonprofit organizations by donating a Checkly Developer plan to them.
-            </p>
-            <p>Interested in joining us? <a href="/jobs">Learn more here</a> 👈</p>
-            <div class="divider pt-5"></div>
+            <p>Interested in joining us? <a href="/jobs">Jobs</a> 👈</p>
+            <p><a href="/open-source">We ❤️ open source</a> 👈</p>
           </div>
         </div>
       </div>
