--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -1,19 +1,38 @@
 {{ define "main" }}
-<div class="main pt-5">
-  <div class="about">
+
+<div class="main container pt-5">
+    <section>
+      <div class="container">
+          <div class="integrations__hero align-items-center text-center">
+            <h1 class="display-3">Create the best active monitoring platform.</h1>
+            <p class="integrations__hero__lead">
+              Open Source powered automation - made fast, reliable and easy-to-use.
+            </p>
+          </div>
+        <div class="row text-left justify-content-center pt-5">
+          <div class="col-sm-12 col-lg-8">
+            <p class="lead mb-4"><b>About Checkly</b></p>
+            <p class="mb-4">Checkly was founded in Berlin to enable developers to monitor their critical APIs and UIs easily.</p>
+            <p>Synthetic monitoring and end-to-end testing technologies have been sleepy during the last decade; in contrast, the DevOps-space, CI/CD-workflows, and Developer-tools evolved. Modern automation needs to become faster, easy to implement, open, integrated, and reliable. That's what we are working on every day.</p>
+            <p>We believe in a bright future where apps are built and shipped more reliably from dev to production and further. Our vision is to create the best active monitoring platform for developers using modern stacks. A platform with a world-class developer experience!</p>
+            <div class="divider pt-5"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section>
       <div class="container">
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
-            <img src="/images/racoon_logo.svg" alt="Checkly racoon logo" class="mb-4" width="50" height="50">
-            <h1>About Checkly</h1>
-            <p class="lead mb-4"><b>Create the best active monitoring platform for developers</b></p>
-            <p class="mb-4">Checkly was founded in Berlin in 2018 to enable developers to monitor their critical APIs and UIs easily.</p>
-            <p>Synthetic monitoring and end-to-end testing technologies have been sleepy during the last decade; in contrast, the DevOps-space, CI/CD-workflows, and Developer-tools evolved. Modern automation needs to become faster, easy to implement, open, integrated, and reliable. That's what we are working on every day.</p>
-            <p>We believe in a bright future where apps are built and shipped more reliably from dev to production and further. Our vision is to create the best active monitoring platform for developers using modern stacks. A platform with a world-class developer experience!</p>
+            <h2>Open Source</h2>
+            <p>
+            Checkly's foundation is Open Source. We are not only using but building and supporting Open Source.
+            </p>
+            <p>
+            <a href="/open-source">Learn about our Open Source intiatives</a>
+            </p>
             <div class="divider pt-5"></div>
-            <p>Interested in joining us? <a href="/jobs">Jobs</a> 👈</p>
-            <p><a href="/open-source">We ❤️ open source</a> 👈</p>
           </div>
         </div>
       </div>
@@ -22,22 +41,22 @@
       <div class="container">
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
-            <h2 class="mb-5">Founding team</h2>
+            <h2 class="mb-5">Leadership team</h2>
             <div class="row">
               <div class="col-md-6 col-lg-4 align-items-center text-center">
                 <img src="/about/images/tnolet.jpg" alt="portrait Tim Nolet" class="avatar mb-3" width="128" height="128">
                 <h6 class="font-weight-bold mb-1">Tim Nolet</h6>
-                <p>Product & Engineering</p>
+                <p>CTO</p>
               </div>
               <div class="col-md-6 col-lg-4 align-items-center text-center">
                 <img src="/about/images/hlenke.jpg" alt="portrait Tim Nolet" class="avatar mb-3" width="128" height="128">
                 <h6 class="font-weight-bold mb-1">Hannes Lenke</h6>
-                <p>General Manager</p>
+                <p>CEO</p>
               </div>
               <div class="col-md-6 col-lg-4 align-items-center text-center">
                 <img src="/about/images/teuteneuer.jpg" alt="portrait Timo Euteneuer" class="avatar mb-3" width="128" height="128">
                 <h6 class="font-weight-bold mb-1">Timo Euteneuer</h6>
-                <p>Go To Market</p>
+                <p>CCO</p>
               </div>
             </div>
             <div class="divider pt-5"></div>
@@ -50,6 +69,10 @@
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
             <h2>Our investors</h2>
+
+            <div class="">
+              <img src="/about/images/accel_400x400.jpg" alt="accel logo" class="avatar mb-3" width="96" height="96">
+            </div>
             <p>We are excited to work with some of the best investors in the world. You might know some of their companies.</p>
             <div class="row text-left justify-content-center">
               <div class="col-md-4">
@@ -104,17 +127,17 @@
                 </address>
               </div>
               <div class="col-sm-4 mb-lg-3">
-                <h5 class="add-star-before">🇳🇱 Netherlands</h5>
-                <address>
-                  The J.P. Coenstraat 24 BIS<br>
-                  3531 ET Utrecht <br>
-                </address>
-              </div>
-              <div class="col-sm-4 mb-lg-3">
                 <h5 class="add-star-before">🇩🇪 Germany</h5>
                 <address>
                   Kopernikusstraße 35<br>
                   10243 Berlin
+                </address>
+              </div>
+              <div class="col-sm-4 mb-lg-3">
+                <h5 class="add-star-before">🇳🇱 Netherlands</h5>
+                <address>
+                  The J.P. Coenstraat 24 BIS<br>
+                  3531 ET Utrecht <br>
                 </address>
               </div>
             </div>
@@ -122,6 +145,5 @@
         </div>
       </div>
     </section>
-  </div>
 </div>
 {{end}}
