post design feedback change

--- a/site/layouts/about/list.html
+++ b/site/layouts/about/list.html
@@ -11,11 +11,10 @@
           </div>
         <div class="row text-left justify-content-center pt-5">
           <div class="col-sm-12 col-lg-8">
-            <p class="lead mb-4"><b>About Checkly</b></p>
+            <h2>About Checkly</h2>
             <p class="mb-4">Checkly was founded in Berlin to enable developers to monitor their critical APIs and UIs easily.</p>
             <p>Synthetic monitoring and end-to-end testing technologies have been sleepy during the last decade; in contrast, the DevOps-space, CI/CD-workflows, and Developer-tools evolved. Modern automation needs to become faster, easy to implement, open, integrated, and reliable. That's what we are working on every day.</p>
             <p>We believe in a bright future where apps are built and shipped more reliably from dev to production and further. Our vision is to create the best active monitoring platform for developers using modern stacks. A platform with a world-class developer experience!</p>
-            <div class="divider pt-5"></div>
           </div>
         </div>
       </div>
@@ -32,7 +31,6 @@
             <p>
             <a href="/open-source">Learn about our Open Source intiatives</a>
             </p>
-            <div class="divider pt-5"></div>
           </div>
         </div>
       </div>
@@ -59,7 +57,6 @@
                 <p>CCO</p>
               </div>
             </div>
-            <div class="divider pt-5"></div>
           </div>
         </div>
       </div>
@@ -106,7 +103,6 @@
                 </dl>
               </div>
             </div>
-            <div class="divider pt-5"></div>
           </div>
         </div>
       </div>
@@ -145,5 +141,6 @@
         </div>
       </div>
     </section>
+    <br/><br/><br/>
 </div>
 {{end}}
