--- a/src/scss/_markdown.scss
+++ b/src/scss/_markdown.scss
@@ -8,7 +8,8 @@
   }
 
   h1 {
-    font-size: 1.8rem;
+    font-size: 2rem;
+    line-height: 3rem;
     margin-bottom: 1rem;
   }
 
@@ -18,7 +19,6 @@
     margin-bottom: 0.5rem;
     font-weight: $font-weight-seimi-bold;
     padding-bottom: .5rem;
-    border-bottom: 1px solid $gray-light;
   }
 
   h3 {
