--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -71,7 +71,7 @@
     .active {
       color: $gray-dark !important;
     }
-    .sub-display {
+    .menu-display {
       display: block;
     }
     &-sub {
