--- a/site/layouts/partials/docs-menu.html
+++ b/site/layouts/partials/docs-menu.html
@@ -11,11 +11,11 @@
       {{ $currentPage := . }}
       {{ range $index, $element:=.Site.Menus.docs }} {{ if .HasChildren }}
       <li class='docs-menu-item'>
-        <div class='docs-menu-title {{ if $currentPage.HasMenuCurrent "docs" . }}active{{ end }}' id="docs-menu-title-{{$index}}">
+        <div class='docs-menu-title{{ if $currentPage.HasMenuCurrent "docs" . }} active{{ end }}' id="{{$index}}">
           <img src="{{.Pre}}" width="26" height="26" alt="{{.Name}}" />
           {{.Name}}
         </div>
-        <ul class='docs-menu-sub {{ if $currentPage.HasMenuCurrent "docs" . }}sub-display{{ end }}' id="docs-menu-{{$index}}-sub">
+        <ul class='docs-menu-sub {{ if $currentPage.HasMenuCurrent "docs" . }}menu-display{{ end }}' id="docs-menu-{{$index}}">
           {{range .Children}} {{ $has := $currentPage.IsMenuCurrent "docs" . }}
           <li class="docs-menu-sub-item {{if $has}}active{{end}}">
             <a href="{{.URL}}">
