update all feedback

--- a/site/layouts/shortcodes/doc-card.html
+++ b/site/layouts/shortcodes/doc-card.html
@@ -3,7 +3,11 @@
 <div class="{{$class}}">
 	{{ if $image }}
 	<div class="image-wrap">
+		{{ if eq $header_tag "h2"}}
 		<img src="{{$image}}" alt="{{$title}}" width="42" height="42" />
+		{{ else }}
+		<img src="{{$image}}" alt="{{$title}}" width="32" height="32" />
+		{{ end }}
 	</div>
 	{{ end }}
 	<div class="text-wrap">
