--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -7,7 +7,7 @@
 
   .algolia-autocomplete .ds-dropdown-menu {
     width: 100%;
-    max-width: 100%;
+    max-width: 100% !important;
     z-index: 99999 !important;
   }
 
