--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -11,6 +11,10 @@
     z-index: 99999 !important;
   }
 
+  .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu{
+    max-width: 100% !important;
+  }
+
   aside nav ul {
     padding: 0;
     margin: 0;
