update sidebar position in scrolling

--- a/site/layouts/docs/list.html
+++ b/site/layouts/docs/list.html
@@ -3,9 +3,9 @@
   {{ partial "docs-menu" .}}
   <div class="docs-page">
     <article class="markdown">
-      <form class="form-inline">
+      <form class="form-inline" id="search-form">
         <img src="/docs/images/icons/search@2x.png" alt="search" with="16" height="16" />
-        <input class="form-control py-2" id="search" type="search" placeholder="Type to search the docs..."/>
+        <input class="form-control py-2" id="search" type="search" placeholder="Press / to search" />
       </form>
       <h1>{{ .Title }}</h1>
       {{ if .Page.TableOfContents }}
@@ -26,8 +26,10 @@
   </div>
   {{ if .Page.TableOfContents }}
   <aside class="docs-toc mb-3">
-    <div class="docs-toc-header">On this page</div>
-    {{ .Page.TableOfContents }}
+    <div id="tocMenu">
+      <div class="docs-toc-header">On this page</div>
+      {{ .Page.TableOfContents }}
+    </div>
   </aside>
   {{ end }}
 </div>
