added sticky class

--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -46,7 +46,7 @@
       }
     }
     .sticky {
-      position: fixed;
+      position: fixed !important;
       top: 1rem;
     }
 
@@ -190,7 +190,7 @@
     padding-top: 8rem;
 
     .sticky {
-      position: fixed;
+      position: fixed !important;
       top: 5rem;
     }
 
