--- a/site/layouts/docs/single.html
+++ b/site/layouts/docs/single.html
@@ -25,7 +25,7 @@
       </article>
     </div>
     {{ if .Page.TableOfContents }}
-    <aside class="docs-toc mb-3" id="tocMenu">
+    <aside class="docs-toc mb-3">
       <div id="tocMenu">
         <div class="docs-toc-header">On this page</div>
         {{ .Page.TableOfContents }}
