add terraform to workflow.

--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -12,14 +12,13 @@
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
         <div class="d-flex align-items-center" style="height: 80px;">
           <picture>
-            <source type="image/webp" srcset="/landing/puppeteer-logo@2x.webp">
-            <source type="image/png" srcset="/landing/puppeteer-logo@2x.png">
-            <img src="/landing/puppeteer-logo@2x.png" alt="puppeteer playwright logo" width="48" height="70" />
+            <source type="image/webp" srcset="/landing/terra-logo@2x.webp">
+            <source type="image/png" srcset="/landing/terra-logo@2x.png">
+            <img src="/landing/terra-logo@2x.png" alt="terraform logo" width="70" height="70" />
           </picture>
-          <span alt="playwright logo" class="pl-2" style="font-size: 55px;">🎭</span>
         </div>
-        <h5>Puppeteer & Playwright</h5>
-        <p>Harness the full power of the Puppeteer & Playwright frameworks to test and monitor your web apps.</p>
+        <h5>Terraform</h5>
+        <p>Configure and scale your monitoring with Terraform's powerful CLI workflow.</p>
         <a class="cta-link" href="/docs/browser-checks">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
