--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -19,7 +19,7 @@
         </div>
         <h5>Terraform</h5>
         <p>Configure and scale your monitoring with Terraform's powerful CLI workflow.</p>
-        <a class="cta-link" href="/docs/browser-checks">Learn more</a>
+        <a class="cta-link" href="/docs/integrations/terraform/">Learn more</a>
       </div>
       <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 workflow-item">
         <div class="d-flex align-items-center" style="height: 80px;">
