--- a/site/layouts/partials/workflow-section.html
+++ b/site/layouts/partials/workflow-section.html
@@ -54,7 +54,7 @@
           </picture>
         </div>
         <h5>Prometheus</h5>
-        <p>Export uptime and status data to your Prometheus cluster.</p>
+        <p>Export uptime, status and response time data to your Prometheus cluster.</p>
         <a class="cta-link" href="/docs/integrations/prometheus/">Learn more</a>
       </div>
     </div>
