--- a/src/scss/checkly-webapp-src/style/scss/components/_dropdowns.scss
+++ b/src/scss/checkly-webapp-src/style/scss/components/_dropdowns.scss
@@ -53,3 +53,26 @@
     font-size: 10px;
   }
 }
+
+@include media-breakpoint-down(md) {
+  .dropdown-menu {
+    width: 100%;
+    padding: 8px 0;
+    left: 0;
+
+    .d-flex {
+      .menu-icon {
+        display: none;
+      }
+      .menu-text {
+        display: none;
+      }
+    }
+  }
+  .dropmenu-triangle {
+    display: none;
+  }
+  .dropdown-item {
+    padding: 12px 24px;
+  }
+}
