mobile menu for the docs

--- a/site/layouts/partials/docs-menu.html
+++ b/site/layouts/partials/docs-menu.html
@@ -32,6 +32,8 @@
       {{end}} {{end}}
     </ul>
   </nav>
+  <div class="docs-menu-mobile-right-space">
+  </div>
 
   <!-- Restore menu position as soon as possible to avoid flickering -->
   <script>
