--- a/site/layouts/docs/list.html
+++ b/site/layouts/docs/list.html
@@ -3,10 +3,15 @@
   {{ partial "docs-menu" .}}
   <div class="docs-page">
     <article class="markdown">
-      <form class="form-inline" id="search-form">
-        <img src="/docs/images/icons/search@2x.png" alt="search" with="16" height="16" />
-        <input class="form-control py-2" id="search" type="search" placeholder="Press / to search" />
-      </form>
+      <div class="d-flex search">
+        <div class="mobile-toc-button" id="mobile-toc-button">
+          <img src="/images/icons/toc-icon.svg" alt="table of contents" width="14" height="12" /> Table of contents
+        </div>
+        <form class="form-inline" id="search-form">
+          <img src="/docs/images/icons/search@2x.png" alt="search" with="16" height="16" />
+          <input class="form-control py-2" id="search" type="search" placeholder="Press / to search" />
+        </form>
+      </div>
       <h1>{{ .Title }}</h1>
       {{ if .Page.TableOfContents }}
       <div class="docs-toc-mobile mb-5 pt-3">
