--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -46,6 +46,11 @@
       }
 
     }
+    .docs-menu-mobile-right-space {
+      display: none;
+      width: 0;
+      height: 0;
+    }
 
     a {
       color: $gray-dark;
@@ -153,16 +158,24 @@
 
     .markdown {
       padding-right: 30px;
+
+      .mobile-toc-button {
+        display: none;
+      }
+
+      .search {
+        margin-bottom: 30px;
+      }
     }
 
     .form-inline {
       width: 100%;
-      margin-bottom: 30px;
       position: relative;
 
       span {
         width: 100%;
         max-width: 2000px;
+        height: 100%;
       }
       img {
         position: absolute;
@@ -171,6 +184,7 @@
       }
       input {
        width: 100%;
+       height: 100%;
        background: none;
        border: 1px solid $gray-light;
        padding-left: 30px;
@@ -240,6 +254,12 @@
 
     h1, h2, h3, h4, h5 {
       color: $black;
+    }
+    nav#TableOfContents {
+      ul {
+        border-left: 2px solid $brand-primary;
+        padding-left: .5rem;
+      }
     }
 
     .cards-list {
@@ -313,8 +333,32 @@
     }
 
     .docs-menu {
-      margin-left: -$menu-width;
+      position: fixed;
+      z-index: 10000;
+      width: 100%;
+      height: calc(100vh + 80px);
+      top: 0px;
+      left: -100%;
       font-size: $font-size-base;
+      background: rgba(0, 0, 0, .2);
+
+      nav {
+        border: 0;
+        border-radius: 0;
+        height: 100%;
+        width: 260px;
+        left: -260px;
+        margin-top: 0px;
+        background: white;
+      }
+      .docs-menu-mobile-right-space {
+        display: block;
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: calc(100% - 260px);
+        height: 100%;
+      }
     }
 
     .docs-toc {
@@ -322,6 +366,33 @@
     }
     .docs-toc-mobile {
       display: block;
+    }
+    .docs-page {
+      .markdown {
+        padding-right: 0;
+        .mobile-toc-button {
+          display: block;
+          width: 155px;
+          margin-right: 10px;
+          padding: 12px 9px;
+          color: $gray-dark;
+          border: 1px solid $gray;
+          border-radius: 5px;
+          background: $gray-lightest;
+          font-size: 14px;
+          line-height: 20px;
+
+          img {
+            margin-top: -4px;
+          }
+        }
+        .form-inline {
+          width: calc(100% - 165px);
+          img {
+            top: 15px;
+          }
+        }
+      }
     }
   }
 
@@ -342,6 +413,30 @@
 
       .markdown {
         opacity: 0.25;
+      }
+    }
+  }
+  @include media-breakpoint-down(xs) {
+    .docs-page {
+      .markdown {
+        .search {
+          flex-wrap: wrap;
+        }
+        .mobile-toc-button {
+          width: 100%;
+          text-align: center;
+          margin-bottom: 20px;
+          margin-right: 0;
+        }
+        .form-inline {
+          width: 100%;
+          span {
+            height: 45px;
+          }
+          img {
+            top: 15px;
+          }
+        }
       }
     }
   }
