update menu text

--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -16,7 +16,7 @@
                 </div>
                 <div>
                   <div class="menu-title">API Monitoring</div>
-                  <div class="menu-text">Metus risus, ac nunc, integer sed donec pharetra, imperdiet. Mauris id.</div>
+                  <div class="menu-text">Powerful HTTP-based checks to monitor all your APIs endpoints easily.</div>
                 </div>
               </div>
             </a>
@@ -27,7 +27,7 @@
                 </div>
                 <div>
                   <div class="menu-title">Synthetic Monitoring</div>
-                  <div class="menu-text">Vitae nunc, molestie id nunc lorem ac nec est. Velit tellus quisque dictumst.</div>
+                  <div class="menu-text">Open Source based E2E automation to monitor your web app continuously.</div>
                 </div>
               </div>
             </a>
@@ -38,7 +38,7 @@
                 </div>
                 <div>
                   <div class="menu-title">Alerting</div>
-                  <div class="menu-text">Sem urna, varius curabitur amet. Commodo mi morbi pretium velit.</div>
+                  <div class="menu-text">Deep and reliable alerting to wake you up if things go wrong.</div>
                 </div>
               </div>
             </a>
